# QTLABS

./: .gitignore  .gitignore.txt
automat/: CMakeLists.txt  RAPORT.md
automat/src/: appbase.cpp  appbase.h  appbase.ui  basewindow.cpp  basewindow.h  basewindow.ui  coininserter.cpp  coininserter.h  coininserter.ui  main.cpp  paymentwindows.cpp  paymentwindows.h  paymentwindows.ui  summarywindow.cpp  summarywindow.h  summarywindow.ui
lab1/: CMakeLists.txt  flag_icons.qrc  lab1layout.ui  main.cpp  widget.cpp  widget.h
lab1-zad2/: CMakeLists.txt  widget.ui
